# deepiri-voxier

./: .gitignore  .godot-version  README.md  pyproject.toml  rank.py  setup.sh  size.py  start.sh  tests.py
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: codeql.yml  release.yml
GodotProject/audio/music/: orbit_drone.wav.import
GodotProject/audio/sfx/: bonus.wav.import  enemy_die.wav.import  explosion.wav.import  fire.wav.import  hop.wav.import  hurt.wav.import  pickup.wav.import
GodotProject/data/: repo_prefix_allowlist.txt
GodotProject/scenes/fx/: scanline_layer.tscn  vignette_layer.tscn
GodotProject/scripts/: background_manager.gd  enemy_spawner.gd  player.gd  powerup.gd  rocket.gd  vox_analyzer.gd
GodotProject/scripts/arcade/: collision_layers.gd  (+3 more)
GodotProject/shaders/: scanlines.gdshader  starfield_bg.gdshader  ui_pulse.gdshader  vignette.gdshader
Voxier/: export_presets.cfg  project.godot
Voxier/audio/: AUDIO_CREDITS.md  default_bus_layout.tres
Voxier/resources/: background_profile.gd
Voxier/scenes/: enemy_3d.tscn  main.gd  main.tscn  main_3d.tscn  player_3d.tscn  settings.tscn
Voxier/scripts/: background_manager.gd  cat_pilot_game.gd  direction_controller.gd  enemy.gd  game_manager.gd  main.gd  player.gd  rocket.gd  settings.gd  vox_ui.gd
Voxier/shaders/: fox_sprite_rim.gdshader  starfield_bg.gdshader  wildspace_floor.gdshader  wildspace_sky.gdshader
Voxier/themes/: deepiri_theme.tres
docs/: RELEASE.md  VOX_WILDSPACE_ROADMAP.md
scripts/ci/: export-release.sh  install-godot.sh
src/voxier/: __main__.py
(+84 files in other folders)
